--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,13 @@
   --background-color: #141414;
   --text-color: hsl(0, 0%, 100%);
   --hover-color: hsl(75, 94%, 57%);
-  --font-family: "Inter-Regular", "Arial, sans-serif";
+  --font-family: "Inter", Arial, sans-serif;
 }
 
 * {
   margin: 0;
   padding: 0%;
   font-size: 14px;
-}
-
-@font-face {
-  font-family: "Inter-Regular";
-  src: url("./assets/fonts/static/Inter-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
 }
 
 body {
@@ -68,6 +61,7 @@ button {
   color: var(--text-color);
   padding: 10px;
   margin-bottom: 10px;
+  border: none;
 }
 
 button:hover {
